[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/GUI/panel-header.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI/Buttons/btn-skill-up-default.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Buttons/btn-skill-up-disabled.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/TownButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/GUI/Buttons/btn-skill-up-hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/game_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/GUI/LevelUp.gd" type="Script" id=7]

[node name="LevelUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 11.0
margin_top = 6.0
margin_right = 117.0
margin_bottom = 28.0
texture = ExtResource( 1 )

[node name="IncHPButton" parent="." instance=ExtResource( 4 )]
margin_left = 2.0
margin_top = 22.0
margin_right = 43.0
margin_bottom = 80.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )

[node name="IncStrButton" parent="." instance=ExtResource( 4 )]
margin_left = 44.0
margin_top = 22.0
margin_right = 85.0
margin_bottom = 80.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )

[node name="IncSpdButton" parent="." instance=ExtResource( 4 )]
margin_left = 86.0
margin_top = 22.0
margin_right = 127.0
margin_bottom = 80.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )

[node name="LevelUpLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 11.0
margin_right = 110.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.92549, 0.596078, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "level 13!"
align = 1

[node name="TextLabel" type="Label" parent="."]
margin_left = 9.0
margin_top = 29.0
margin_right = 35.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.92549, 0.905882, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "HP"
align = 1

[node name="HPIncLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 57.0
margin_right = 36.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.509804, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "+2"
align = 1

[node name="TextLabel2" type="Label" parent="."]
margin_left = 51.0
margin_top = 29.0
margin_right = 77.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.92549, 0.905882, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "STR"
align = 1

[node name="DmgIncLabel" type="Label" parent="."]
margin_left = 49.0
margin_top = 57.0
margin_right = 78.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.509804, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "+1"
align = 1

[node name="TextLabel3" type="Label" parent="."]
margin_left = 94.0
margin_top = 29.0
margin_right = 120.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.92549, 0.905882, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "SPD"
align = 1

[node name="SpeedIncLabel" type="Label" parent="."]
margin_left = 92.0
margin_top = 57.0
margin_right = 121.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.509804, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "+1"
align = 1

[node name="CurrentHPLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 40.0
margin_right = 38.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.92549, 0.905882, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "18"
align = 1

[node name="CurrentDmgLabel" type="Label" parent="."]
margin_left = 49.0
margin_top = 40.0
margin_right = 80.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.92549, 0.905882, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "4"
align = 1

[node name="CurrentSpeedLabel" type="Label" parent="."]
margin_left = 91.0
margin_top = 40.0
margin_right = 122.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.92549, 0.905882, 0.0431373, 1 )
custom_fonts/font = ExtResource( 6 )
text = "5"
align = 1
